# csad2425ki401larionovao10

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yaml
client/: game_state.xml
client/include/: game.h  game_logic.h  menu.h  serial.h
client/src/: game.cpp  game_logic.cpp  main.cpp  menu.cpp  serial.cpp
html/: dir_5c23080e296bbe846f4ed2d01d7b595d.html  dir_b565d458ba0ce2faccd0ea2cd60c04eb.html  dir_db3a54907829b36871118d03417739cd.html  doxygen_crawl.html  files.html  game_8cpp.html  game_8h.html  game_8h_source.html  game__logic_8cpp.html  game__logic_8h.html  game__logic_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  menu_8cpp.html  menu_8h.html  menu_8h_source.html  menudata.js  serial_8cpp.html  serial_8h.html  serial_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  (+4 more)
latex/: dir_5c23080e296bbe846f4ed2d01d7b595d.tex  dir_b565d458ba0ce2faccd0ea2cd60c04eb.tex  dir_db3a54907829b36871118d03417739cd.tex  files.tex  game_8cpp.tex  game_8h.tex  game_8h_source.tex  game__logic_8cpp.tex  game__logic_8h.tex  game__logic_8h_source.tex  index.tex  main_8cpp.tex  menu_8cpp.tex  menu_8h.tex  menu_8h_source.tex  refman.tex  serial_8cpp.tex  serial_8h.tex  serial_8h_source.tex
server/: server.ino
